--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@ant-design/icons": "^5.5.1",
 		"@commitlint/cli": "^17.0.2",
 		"@commitlint/config-conventional": "^17.0.2",
+		"@types/mockjs": "^1.0.10",
 		"@types/node": "^17.0.41",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
@@ -66,6 +67,7 @@
 		"husky": "^8.0.1",
 		"less": "^4.1.3",
 		"lint-staged": "^13.0.2",
+		"mockjs": "^1.1.0",
 		"postcss": "^8.4.14",
 		"prettier": "^2.6.2",
 		"rollup-plugin-visualizer": "^5.6.0",
